# xfce-net-plugin

./: .gitignore  README.md
src/: CMakeLists.txt  meson.build  meson_options.txt  nm-dbus.c  nm-dbus.h  plugin.c  popup.c  popup.h  xfce-net-plugin.desktop.in
src/po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  fr.po  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  xfce-net-plugin.pot  zh_CN.po
